code style and PR comments